Support multiple unauth_users via comma-delimited